<resources>
    <string name="app_name">EZGrocery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="drop_table">DROP TABLE IF EXISTS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_confirmation">Are you sure you want to delete this item?</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="item_description">Item Description:</string>
    <string name="start_grocery_list">Start Grocery List</string>
</resources>