<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:padding="10dp"
        android:text="@string/add_item"
        />
    <EditText
        android:id="@+id/editName"
        android:hint="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginHorizontal="20dp"
        android:importantForAutofill="no"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/editQuantity"
        android:hint="@string/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:inputType="number"
        android:layout_marginHorizontal="20dp"
        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/editDescription"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:layout_marginHorizontal="20dp"
        android:importantForAutofill="no"
        />
    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginVertical="10dp"
        android:text="@string/done"
        android:layout_marginHorizontal="20dp"
        />
</LinearLayout>